--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,102 @@
-body{
+body {
     background-color: #046dd5;
 }
 
-header{
+header {
     background-color: white;
     padding: .8em;
-
     display: flex;
     flex-direction: row;
 }
 
-header .login{
+header .login {
     margin: auto 2em auto auto;
 }
+
 header #title {
     font-family: "Ubuntu Thin", sans-serif;
-    margin: auto 0.3em ;
     font-size: 3em;
+    margin: auto 0.3em;
 }
-header #user{
+
+header #user {
     display: none;
     visibility: hidden;
 }
 
 aside {
     background-color: white;
+}
+
+a {
+    all: unset;
+    text-decoration: none;
+}
+
+ul.no_bullet li {
+    list-style-type: none;
+}
+
+#filterElement {
+    padding: 0;
+    margin: 0;
+}
+
+.multipleSelector,
+.radioSelector {
     padding: 1em;
+    margin: 0;
+    border-bottom: black;
+}
+
+#filterTag {
+    background-color: #232323;
+    color: #ffffdc;
+    padding: 1em;
+}
+
+div.multipleSelector,
+div.radioSelector {
+    border-bottom: 2px solid black;
+}
+
+.multipleSelector label input,
+.radioSelector label input {
+    display: none;
+}
+
+.radioSelector span {
+    border-radius: 50%;
+}
+
+.multipleSelector label span,
+.radioSelector label span {
+    height: 20px;
+    width: 20px;
+    top: 5px;
+    border: 1px solid grey;
+    display: inline-block;
+    position: relative;
+}
+
+.multipleSelector input[type="checkbox"]:checked+span::after,
+.radioSelector input[type="radio"]:checked+span::after {
+    content: "";
+    height: 10px;
+    width: 10px;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    border: 1px solid grey;
+    background: #f5b027;
+    background-color: rgb(245, 176, 39);
+    background-position-x: 0%;
+    background-position-y: 0%;
+    background-repeat: repeat;
+    background-attachment: scroll;
+    background-image: none;
+    background-size: auto;
+    background-origin: padding-box;
+    background-clip: border-box;
+    border-radius: inherit;
 }
