--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,44 @@
 body {
-    background-color: #046dd5;
+    background-color: #bebebe;
 }
 
 header {
-    background-color: white;
+    background-color: #252531;
     padding: .8em;
     display: flex;
     flex-direction: row;
+    color: white;
 }
 
-header .login {
+header .login_register {
+    display: inline;
     margin: auto 2em auto auto;
+}
+
+header .button {
+    padding: 1em;
+    margin-left: 1em;
+    border-radius: 10px;
+}
+
+header .button-text {
+    margin: auto;
+    width: 7em;
+    text-align: center;
+    display: inline-block;
+}
+
+header #login {
+    border: #8bc7b5 solid 4px;
+    color: #8bc7b5;
+    border-radius: 10px;
+    background-color: #fdfefe;
+}
+
+header #register {
+    border: #ed3a58 solid 4px;
+    border-radius: 10px;
+    background-color: #ed3a58;
 }
 
 header #title {
