--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,20 +1,11 @@
 body {
     width: 80em;
     margin: 0 auto;
-    display: grid;
-    grid-template-areas:
-    'header header header header header header'
-    'filter animals animals animals animals animals'
-}
-
-.animal_main_page{
-    grid-area: animals;
 }
 
 header {
     display: flex;
     flex-direction: row;
-    grid-area: header;
 }
 
 header .login_register {
@@ -22,9 +13,13 @@ header .login_register {
     flex-direction: row;
 }
 
+.body{
+    display: flex;
+    flex-direction: row;
+}
+
 aside {
-    max-width: 12em;
-    grid-area: filter;
+    width: 12em;
 }
 
 .login_register_form {
@@ -46,4 +41,23 @@ aside {
 #login_register_outer_box{
     width: 30%;
     margin: 10% auto;
+}
+
+#animal_profiles{
+    margin: auto;
+    padding: 2em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+#animal_main_page{
+    display: flex;
+    padding: 1em;
+    flex-direction: column;
+    margin: auto;
+}
+
+#animal_main_page > label{
+    text-align: center;
 }
