fixed session_start missing errors

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -130,7 +130,7 @@ div.radioSelector {
     border-radius: inherit;
 }
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
