progress on replies

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -229,3 +229,8 @@ img.animal_image_box{
     font-size: 3em;
     width: 100%;
 }
+
+
+/* article.question span.question_id{
+    display: none;
+} */
