--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,56 +1,8 @@
 body {
-    background-color: #bebebe;
+    background-color: #ebebeb;
+    font-family: 'Raleway';
 }
 
-/* HEADER */
-
-header {
-    background-color: #252531;
-    padding: .8em;
-    width: 100%;
-    display: flex;
-    margin: 0 auto;
-    flex-direction: row;
-    color: white;
-}
-
-header .login_register {
-    display: inline;
-    margin: auto 2em auto auto;
-}
-
-header .button {
-    padding: 1em;
-    margin-left: 1em;
-    border-radius: 10px;
-}
-
-header .button-text {
-    margin: auto;
-    width: 7em;
-    text-align: center;
-    display: inline-block;
-}
-
-
-header #login {
-    border: #8bc7b5 solid 4px;
-    color: #8bc7b5;
-    border-radius: 10px;
-    background-color: #fdfefe;
-}
-
-header #register {
-    border: #ed3a58 solid 4px;
-    border-radius: 10px;
-    background-color: #ed3a58;
-}
-
-header #title {
-    font-family: "Ubuntu Thin", sans-serif;
-    font-size: 3em;
-    margin: auto 0.3em;
-}
 
 /* HEADER BUTTONS */
 
