--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap%27');
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 header {
     background-color: #19142C;
     width: 100%;
@@ -93,3 +98,21 @@ header #user{
     float: center;
 }
 
+/* FOOTER */
+
+.footer{
+    background-color: #19142C;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+}
+
+.footer .text{
+    color: #A909AC;
+    margin: 10px;
+    margin-left: 5%;
+    font-weight: 550;
+}
