--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,11 @@ body {
     background-color: #bebebe;
 }
 
+a:hover,
+button:hover{
+    cursor: pointer;
+}
+
 /* HEADER */
 
 header {
@@ -33,7 +38,8 @@ header .button-text {
 }
 
 
-header #login {
+header #login,
+header #add-pet{
     border: #8bc7b5 solid 4px;
     color: #8bc7b5;
     border-radius: 10px;
@@ -46,11 +52,17 @@ header #register {
     background-color: #ed3a58;
 }
 
+header #user{
+    margin: auto;
+}
+
 header #title {
     font-family: "Ubuntu Thin", sans-serif;
     font-size: 3em;
     margin: auto 0.3em;
 }
+
+
 
 /* HEADER BUTTONS */
 
@@ -93,7 +105,13 @@ header #title {
 }
 
 .no_link_style:hover{
-    cursor: default;
+    cursor: pointer;
+}
+
+.animal_image_box,
+.animal_image_box:hover,
+.animal_text_box{
+    cursor: pointer;
 }
 
 
@@ -105,6 +123,8 @@ aside {
     background-color: white;
     margin: 0 0 auto 0;
 }
+
+
 
 a {
     all: unset;
@@ -148,7 +168,7 @@ button.dropdown_button{
 }
 
 div.multipleSelector,
-div.radioSelector, 
+div.radioSelector,
 div.textInput,
 div.intRange {
     border-bottom: 2px solid black;
@@ -229,7 +249,7 @@ label.drop_down{
     border-radius: inherit;
 }
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -250,6 +270,8 @@ input[type=text], input[type=password] {
     margin-right: 2px;
 }
 
+
+
 .animal_text_box{
     border-top: black;
     border-radius: 1px;
@@ -269,7 +291,6 @@ img.animal_image_box{
     display: block;
     text-align: center;
     background-color: white;
-    
 }
 
 .title_pets_display{
@@ -282,6 +303,49 @@ img.animal_image_box{
 
 .show_dropdown {
     display: block;
+}
+
+section#questions,
+section#proposals{
+    padding: 2em;
+    background-color: #cccccc;
+    border: #cccccc 2px solid;
+    border-radius: 8px;
+}
+
+section#proposals{
+    display: flex;
+    flex-flow: column;
+}
+
+div.reply a#author{
+    margin-left: 1em;
+}
+
+div.reply{
+    background-color: #cabeca;
+    padding-top: 0.5em;
+    padding-bottom:  0.5em;
+    margin: 0.4em;
+}
+
+div.proposal{
+    padding: 0.3em;
+    display: flex;
+    flex-flow: column;
+}
+
+label#proposal-text{
+    padding: 0.7em;
+    background-color: #cabeca;
+    border: #cccccc 2px solid;
+    border-radius: 8px;
+    margin: auto auto auto 1em;
+}
+
+form textarea#proposal-text{
+    width: 100%;
+    resize: none;
 }
 
 
