--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,11 +1,18 @@
 body {
     background-color: #bebebe;
+    width: 100%;
 }
 
 a:hover,
 button:hover{
     cursor: pointer;
 }
+
+/* COLORED LINKS */
+
+a:link {
+    color:inherit;
+ }
 
 /* HEADER */
 
@@ -17,6 +24,8 @@ header {
     margin: 0 auto;
     flex-direction: row;
     color: white;
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
 }
 
 header .login_register {
@@ -53,6 +62,7 @@ header #register {
 }
 
 header #user{
+    color: white;
     margin: auto;
 }
 
@@ -60,6 +70,7 @@ header #title {
     font-family: "Ubuntu Thin", sans-serif;
     font-size: 3em;
     margin: auto 0.3em;
+    color: white;
 }
 
 
@@ -348,4 +359,39 @@ form textarea#proposal-text{
     resize: none;
 }
 
+/* FOOTER */
+
+.footer{
+    background-color:  #252531;
+    width: 100%;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    margin-top: 0;
+}
+
+.footer .text{
+    margin: 10px;
+    margin-left: 5%;
+    font-weight: 550;
+}
+
+
+/* ANIMAL PROFILE */
+
+#animal_profile label{
+    font-weight: 550;
+    text-align: center;
+    padding: 0.5em;
+}
+
+.profile_img{
+    background-color: white;
+    height: auto;
+    vertical-align: middle;
+    overflow: hidden;
+    border-radius: 10px;
+}
 
