solved accept deny button error on multiple proposals

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -105,6 +105,10 @@ section#questions{
     grid-area: proposals;
 }
 
+section#proposals{
+    max-width: 30em;
+}
+
 div#question_header,
 div.proposal{
     display: flex;
