--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,5 +1,5 @@
 body {
-    width: 100%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -27,6 +27,89 @@ header .login_register {
             "profile questions proposals";
     grid-gap: 40px;
     width: 100%;
+}
+
+.user_page{
+    display: grid;
+    grid-template-columns: 16em auto auto;
+    grid-template-rows: auto auto auto;
+    grid-template-areas:
+            "profile non_adopted adopted"
+            "proposals favourites favourites"
+            "proposals posts posts";
+    grid-gap: 40px;
+    width: 100%;
+
+}
+
+label.question_text_box{
+    max-width: 11em;
+}
+
+aside#user_profile{
+    grid-area: profile;
+}
+
+section#non_adopted_animals{
+    display: flex;
+    flex-direction: column;
+    grid-area: non_adopted;
+}
+
+section#non_adopted_list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-left: 0.4rem;
+    padding-right: 0.4rem;
+}
+
+
+section#adopted_animals{
+    display: flex;
+    flex-direction: column;
+    grid-area: adopted;
+}
+
+section#adopted_list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-left: 0.4rem;
+    padding-right: 0.4rem;
+}
+
+section#user_favourite_animals{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    grid-area: favourites;
+}
+section#favourites_list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-left: 0.4rem;
+    padding-right: 0.4rem;
+    padding-bottom: 0.4rem;
+}
+
+section#user_proposals{
+    display: flex;
+    flex-direction: column;
+    grid-area: proposals;
+}
+section#user_posts{
+    display: flex;
+    flex-direction: column;
+    grid-area: posts;
+}
+section#posts_list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-left: 0.4rem;
+    padding-right: 0.4rem;
 }
 
 aside {
