--- a/src/css/style.css
+++ b/src/css/style.css
@@ -521,11 +521,58 @@ form textarea#proposal-text{
     color: #252531;
     border: 1px solid #252531;
     border-radius: 10px;
-
 }
+
+#user_profile > input{
+    display: block;
+    padding: 0.7em;
+    margin: 0.7em;
+    color: #252531;
+    border: 1px solid #252531;
+    border-radius: 10px;
+    margin: 1em auto;
+    background-color: white;
+    text-align: center;
+    min-width: 90%;
+}
+
+#user_profile > a{
+    padding: 0.1em;
+    margin: 0.5em;
+    color: #252531;
+    background-color: #cccccc;
+    border: 1px solid #252531;
+    justify-content: center;
+    font-family: 'Times New Roman', Times, serif;
+    border-radius: 5px;
+}
+
 
 #user_profile:first-child{
     text-align: center;
+}
+
+#edit_user_profile{
+    padding: 0.1em;
+    margin: 0.5em;
+    margin-bottom: 1em;
+    color: #252531;
+    background-color: #cccccc;
+    border: 1px solid #252531;
+    justify-content: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 0.95em;
+    border-radius: 5px;
+}
+
+#make_changes,
+#discard_button{
+    margin: 1em 0.4em 1em 0.4em;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 0.95em;
+    background-color: #cccccc;
+    border: 1px solid #252531;
+    border-radius: 5px;
 }
 
 
@@ -608,6 +655,10 @@ div .title{
     height: 40px;
     display: block;
     padding-left: 0.8em;
+    color: #252531;
+}
+
+header .button-text{
     color: #252531;
 }
 
