--- a/src/css/style.css
+++ b/src/css/style.css
@@ -601,6 +601,9 @@ form textarea#proposal-text{
 #user_proposals{
     background-color: #cccccc;
     border-radius: 15px;
+}
+
+section#user_proposals > label{
     padding: 0.8em;
 }
 
@@ -660,3 +663,12 @@ header .button-text{
     color: #252531;
 }
 
+
+.user_page .title{
+    background-color: white;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 2em;
+    border-radius: 10px 10px 0 0;
+    margin-bottom: 0.5em;
+}
