--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -20,7 +20,7 @@ header .login_register {
 
 #animal_profile_body{
     display: grid;
-    grid-template-columns: 16em auto auto;
+    grid-template-columns: 19em auto auto;
     grid-template-rows: auto auto;
     grid-template-areas:
             "profile photos photos"
@@ -31,7 +31,7 @@ header .login_register {
 
 .user_page{
     display: grid;
-    grid-template-columns: 16em auto auto;
+    grid-template-columns: 19em auto auto;
     grid-template-rows: auto auto auto;
     grid-template-areas:
             "profile non_adopted adopted"
@@ -113,7 +113,7 @@ section#posts_list{
 }
 
 aside {
-    width: 16em;
+    width: 19em;
 }
 
 .login_register_form {
@@ -132,6 +132,25 @@ aside {
     padding: 5% 0;
 }
 
+.edit_pass_form {
+    background-color: white;
+    margin: 1em;
+    display: flex;
+    flex-direction: column;
+    padding: 2em 1em 0.5em 1em;
+    border-radius: 10px;
+}
+
+.edit_pass_form label{
+    margin: auto;
+}
+
+.edit_pass_form #buttons-section {
+    display: flex;
+    flex-direction: row;
+    padding: 5% 0;
+}
+
 #login_register_outer_box{
     width: 30%;
     margin: 10% auto;
@@ -142,7 +161,6 @@ aside {
     padding: 0.2em;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
 }
 #animal_profile{
     display: flex;
@@ -156,12 +174,14 @@ aside {
     margin: auto;
 }
 
-section#favourites{
+section#favourites,
+section#remove_pet{
     margin: auto;
 }
-form#favourite_form{
+form#favourite_form,
+form#remove_pet_form{
     margin: auto;
-    padding: 1em;
+    padding: 0.3em;
 }
 
 #animal_main_page > label{
@@ -260,16 +280,23 @@ div#proposal_head label:first-child{
 }
 
 div#change_state_div {
-    display: flex;
-    flex-flow: row;
+    display: grid;
+    grid-template-columns: 6em 6em 6em;
+    grid-template-areas: "previous state_info next";
 }
 div#change_state_div input[type="submit"]{
     width: 6em;
     text-align: center;
+    margin: 0;
+    padding: 0;
+}
+div#change_state_div {
+    margin: auto;
 }
 
+
 .animal_profile_info {
-    width: 16em;
+    width: 19em;
     display: grid;
     grid-template-columns: 35% 65%;
     grid-template-rows: auto;
@@ -289,3 +316,25 @@ label.info{
     margin-right: 0;
     width: 10.4em;
 }
+
+#animal_profile label.state_info_label{
+    grid-area: state_info;
+    margin: 0;
+    padding: 0;
+}
+
+form#previous{
+    grid-area: previous;
+}
+
+form#next{
+    grid-area: next;
+}
+
+#edit_pass_box{
+    margin: auto;
+}
+#edit_pass_title{
+    margin: auto;
+}
+
